--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   build:
     name: Build Static Files
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
@@ -73,7 +73,7 @@ jobs:
     name: Deploy Static Files
     needs:
       - build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
